--- a/相关文档/小组分工与贡献率说明.md
+++ b/相关文档/小组分工与贡献率说明.md
@@ -5,7 +5,7 @@
 | 学号       | 姓名      | 分工                        | 贡献率（合计100%） |
 | -------- | ------- | ------------------------- | ----------- |
 | 14331315 | 徐佳豪（组长） | 项目管理、需求分析、架构设计、模块设计与编码、答辩 | 23%         |
-| 14331062 | 方铭      | 架构设计、模块设计与编码、项目文档编写       | 22%         |
+| 14331062 | 方铭      | 需求分析、架构设计、模块设计与编码、项目文档编写       | 22%         |
 | 14331194 | 卢卓君     | UI设计、交互设计、模块设计与编码、项目文档编写  | 19%         |
 | 14331151 | 梁智辉     | 需求分析、模块设计与编码、项目文档编写       | 18%         |
 | 14331059 | 杜泽炜     | 需求分析、模块设计与编码、项目文档编写       | 18%         |
