--- a/相关文档/用户手册.md
+++ b/相关文档/用户手册.md
@@ -1,8 +1,9 @@
 # 用户手册
 
->大家都有一颗音乐的心，但有时却受制于环境而不能表现出来。针对这个情况我们做了一个音乐界面，无论你有没有乐器、或是处身于安静的图书馆、又或是在舍友都睡着的凌晨三四点的夜晚，你都可以随性进行弹奏，希望你会喜欢上这个程序。
+>大家都有一颗音乐的心，但却往往因为缺乏接触乐器的机会，而不能接受音乐教育的机会。我们希望通过开发这个项目，让每个人都能在实践中独立地探索和了解音乐，打破传统师徒相授的器乐教育模式，让音乐真正在社会中流行起来。
 
-​这是一个音乐页面,可以通过键盘或鼠标点击来模拟巴扬，钢琴等乐器的发声；操作难度较大，仅供学习和参考。
+
+​这是一个音乐应用,可以通过敲击键盘或鼠标点击来产生各种乐器的声音，相对于钢琴键盘，转调方便，指法简单，对手指的跨度要求小，即使是手小的人也可以在两个八度内轻松演奏。
 
 主要功能特点：
 1. 支持切换显示巴扬键盘和钢琴界面
@@ -13,3 +14,4 @@
 1. 支持切换键盘布局，以便在音域宽广和指法便利中进行权衡
 1. 支持转调功能。按回车或Shift音调升高或降低八度，按方向键左右音调升高或降低一个半音。
 1. 本地MIDI文件可以拖放进浏览器，按空格键自动播放/暂停。可用于伴奏或者观看自动演奏学习指法。
+1. 自适应音域，分析用户提交的MIDI文件，若存在部分音符超出了当前的音域范围，则自动将超出部分的音符升高或降低若干个八度再在巴扬键盘上演奏播放。
