--- a/相关文档/设计文档.md
+++ b/相关文档/设计文档.md
@@ -7,36 +7,43 @@ Color Bayan 是一款使用QWERTY键盘演奏钢琴曲的模拟钢琴软件，
 设计了一套在PC上也能够灵活演奏较复杂乐曲演奏键盘。Color Bayan 支持播放MIDI音乐文件，读取伴奏MIDI文件同时进行演奏，以及显示卷帘动画等功能。
 具体功能详见用户手册。
 
-项目主要采用敏捷开发（Scrum开发）作为我们的开发方法，迭代周期为1周。项目初期的backlog如下：
+本项目交互性很强，音乐演奏和播放对实时性的要求很高，因此很适合采用web技术，以避免底层的多线程开发。考虑到本项目成立之初就是为了让音乐在社会中流行起来，产品的基因很适合在互联网中传播和发展，因此我们决定采用web技术来实现本项目。
+
+项目以前端为主，后端配合管理音色库文件和音乐文件来响应前端的数据请求，从而控制了前端的规模大小，对用户的即时访问更加友好。
+
+我们主要采用敏捷开发（Scrum开发）作为我们的开发方法，迭代周期为1周。我们先重点实现了前端部分，快速构建了产品模型，再以个人为单位分配工作任务创建分支，以最先最好实现功能的分支为准，并入主分支进行迭代开发。
+项目初期的backlog如下：
 
 <!-- 假设这里有backlog -->
 
-本项目交互性很强，音乐演奏和播放对实时性的要求很高，因此我们决定采用web技术，从而避免了底层的多线程开发。
 
-项目涉及到web前端和后端的开发，主要以前端的工作为主。我们采用前后端独立开发方法，先从网上找到相应的音色库的MP3文件并暂时存放在前端的代码中，假设音色库的后端已经搭建好了，建立好映射关系后，就可以将前后端暂时分开，同时开发和调试。
-
-根据以上架构，我们可以把项目划分为两个部分，FE 和 Server，让前端工程师和后端工程师分别管理自己的项目，进行开发工作。接下来详细介绍前端项目和后端项目的技术选型、架构设计以及模块划分。
+接下来详细介绍前端项目技术选型、架构设计以及模块划分。
 
 ## 1、技术选型以及理由
-### UI
 
-采用Typescript+jQuery进行开发，页面采用HTML和CSS实现。
-
-我们采用原始的HTML和CSS来实现UI界面的设计，主要因为如果使用框架，会有很多限制。而我们要实现的界面包括键盘的音符的对应关系，界面灵活多变，而且发声不能有延迟，所以我们选择了灵活和简洁的最原始的界面设计方法。
-
-### 后端
-
-支持的音乐文件格式为MIDI。
+采用Typescript+jQuery作为我们的程序设计语言，采用HTML和CSS技术，配合Material UI 这个CSS框架来绘制界面。乐曲格式采用MIDI技术，音色库采用别人实现已经渲染好的结果文件 。
 
 TypeScript是一种由微软开发的自由和开源的编程语言。它是JavaScript的一个超集，而且本质上向这个语言添加了可选的静态类型和基于类的面向对象编程。TypeScript扩展了JavaScript的语法，所以任何现有的JavaScript程序可以不加改变的在TypeScript下工作。TypeScript是为大型应用之开发而设计，而编译时它产生 JavaScript 以确保兼容性。TypeScript 支持为已存在的 JavaScript 库添加类型信息的头文件，扩展了它对于流行的库如 jQuery，MongoDB，Node.js 和 D3.js 的好处。TypeScript的语法和c++比较接近，开发和调试都比原始的JavaScript简单一点。
 
 jQuery是一个快速、简洁的JavaScript框架，是继Prototype之后又一个优秀的JavaScript代码库（或JavaScript框架）。jQuery设计的宗旨是“write Less,Do More”，即倡导写更少的代码，做更多的事情。它封装JavaScript常用的功能代码，提供一种简便的JavaScript设计模式，优化HTML文档操作、事件处理、动画设计和Ajax交互。
 jQuery的核心特性可以总结为：具有独特的链式语法和短小清晰的多功能接口；具有高效灵活的css选择器，并且可对CSS选择器进行扩展；拥有便捷的插件扩展机制和丰富的插件。jQuery兼容各种主流浏览器，如IE 6.0+、FF 1.5+、Safari 2.0+、Opera 9.0+等。
 
+Material UI 是一款功能非常强大，界面却十分清新简洁的CSS框架，Material UI利用了Google的Material Design 全新设计语言，并且让每一个UI组件都变得非常独立，因此开发者使用Material UI也会比较简单。和Bootstrap类似，Material UI提供了很多常用的UI组件，除了最基本的菜单、按钮、滑动杆、进度条、单选框/复选框外，它还提供了一个非常有趣的日历组件，另外还提供了一些很有趣的图标。
 
+支持的音乐文件格式为MIDI。
+MIDI(Musical Instrument Digital Interface)乐器数字接口，是20 世纪 80 年代初为解决电声乐器之间的通信问题而提出的。MIDI是编曲界最广泛的音乐标准格式，可称为“计算机能理解的乐谱”。它用音符的数字控制信号来记录音乐。一首完整的MIDI音乐只有几十KB大，而能包含数十条音乐轨道。几乎所有的现代音乐都是用MIDI加上音色库来制作合成的。MIDI 传输的不是声音信号，而是音符、控制参数等指令, 它指示MIDI 设备要做什么，怎么做， 如演奏哪个音符、多大音量等。它们被统一表示成 MIDI 消息(MIDI Message) 。传输时采用异步串行通信, 标准通信波特率为31.25×( 1±0.01) KBaud。
 
-#### 2、架构设计
-前端项目主要涉及琴键的页面和发声， Typescript 需要先编译成js才可以真正执行；我们选择使用gulp来进行热编译和链接各个文件。首先将所有的代码统一放在了src文件夹里，然后根据具体的用途和语言类型分为以下4个目录。
+音色库采用 [MIDI Soundfonts] (https://github.com/gleitz/midi-js-soundfonts),
+详情介绍见链接。
+
+## 2、架构设计
+
+首先将所有的代码统一放在了src文件夹里，然后根据具体的用途和语言类型分为以下4个目录。
+
+前端：
+* *css*：层叠样式表目录，用于定义界面需要用到的各种样式
+* *ts*：项目的Typescript源代码，前端都在这个文件夹里进行开发
+* index.html:网页的搭建和索引
 
 后端：
 * *assets*：资源目录，包含两个子目录。
@@ -44,22 +51,16 @@ instrument 用于存放不同乐器的音色库，音乐格式为mp3文件。
 music 用于存放乐曲文件，格式为midi文件。
 * *server*：项目使用node.js搭建后端的代码
 
-前端：
-* *css*：层叠样式表目录，用于定义界面需要用到的各种样式
-* *ts*：项目的Typescript源代码，前端都在这个文件夹里进行开发
-* index.html:网页的搭建和索引
+Typescript 需要先编译成js才可以真正执行；我们选择使用gulp来进行热编译和链接各个文件生成前端页面同时运行后端。编译后，会生成一个dist目录。打开使用chrome内核的浏览器，在地址栏输入：localhost:8081，即可看到运行效果。
 
-开发后的代码需要用gulp来编译，之后会生成一个disk文件夹，里面有相应的js和HTML代码，浏览器打开HTML文件后即可启动程序。程序的前端基本依赖于ts里面的Typescript代码。根据功能不同，分为不同的文件，里面包含了不同具体实现好了的类。
-
-面向服务的架构：
+<!--面向服务的架构：
 * 需要有声音的产生和颜色的变换：单独设计琴键发生的接口和时间，不同乐器的调用，只需要索引到相应的音色库即可；颜色该边，先建立一个颜色变换的对应关系表并提供相应的接口，然后就可以根据音阶的不同获取到相对应的颜色；
-* 自动播放mid文件功能：提供读取拖动文件到页面的调用接口；然后由另外的类实现mid文件的解析，并转成成琴键的操作；这是就可以在界面上显示出自动播放的过程。
+* 自动播放 mid 文件功能：提供读取拖动文件到页面的调用接口；然后由另外的类实现mid文件的解析，并转成成琴键的操作；这是就可以在界面上显示出自动播放的过程。-->
 
 #### 3、模块划分
 * 自动播放：分为时间控制，解析文件，传送相关音色库的编码
 * 发声模块：根据相应的键盘按钮映射到琴键，然后获取相应的音色库中的文件并发声。根据建立好的颜色映射关系，改变琴键的颜色。
 * 乐器界面：软件主要分为基于巴扬和钢琴的2个界面。根据不同乐器的琴键排布特点来设计硬盘的映射关系。
-
 
 ```txt
 ├─css: 存放页面所用到的样式
