--- a/相关文档/设计文档.md
+++ b/相关文档/设计文档.md
@@ -11,10 +11,23 @@ Color Bayan 是一款使用QWERTY键盘演奏钢琴曲的模拟钢琴软件，
 
 项目以前端为主，后端配合管理音色库文件和音乐文件来响应前端的数据请求，从而控制了前端的规模大小，对用户的即时访问更加友好。
 
+![architecture-brief](uml/brief-arch.png)
+
 我们主要采用敏捷开发（Scrum开发）作为我们的开发方法，迭代周期为1周。我们先重点实现了前端部分，快速构建了产品模型，再以个人为单位分配工作任务创建分支，以最先最好实现功能的分支为准，并入主分支进行迭代开发。
 项目初期的backlog如下：
 
-<!-- 假设这里有backlog -->
+| 名称   | 对象  | 重要性  | 具体内容 | 备注 |
+|-----   | ----- | ------ | ------ | ----- | 
+| 切换界面 | 用户 | S | 点击乐器对应的按钮，即可切换 | 界面简洁，重点突出 | 
+| 音色库 | 用户 | S | 使用每种乐器对应的音色库 | 模仿效果逼真 | 
+| 鼠标键盘 | 用户 | S | 用鼠标和键盘模拟琴键进行演奏 | 反应迅速 | 
+| 改变颜色 | 用户 | S | 巴扬界面根据声调的不同显示不同的颜色 | 颜色种类丰富 |
+| 卷帘动画 | 用户 | S | 钢琴页面根据按下的琴键，生成动画效果 | 华丽酷炫 | 
+| 切换布局 | 用户 | S | 拓展用键盘模拟的琴键个数，便于演奏 | 自由切换，相应迅速 | 
+| 转调 | 用户 | S | 使用特定的按键来升高或降低音调 | 更宽的音域选择 | 
+| 解析本地文件 | 用户 | S | 将本地文件拖到浏览器，即可进行解析并可以自动播放；显示按键过程，方便学习 | 支持所有midi文件 |
+| 自适应音域 | 用户 | S | 根据提供的文件，自动调整到合适的音域进行模拟演奏 | 文件还原度较高 |
+
 
 
 接下来详细介绍前端项目技术选型、架构设计以及模块划分。
@@ -51,11 +64,26 @@ instrument 用于存放不同乐器的音色库，音乐格式为mp3文件。
 music 用于存放乐曲文件，格式为midi文件。
 * *server*：项目使用node.js搭建后端的代码
 
-Typescript 需要先编译成js才可以真正执行；我们选择使用gulp来进行热编译和链接各个文件生成前端页面同时运行后端。编译后，会生成一个dist目录。打开使用chrome内核的浏览器，在地址栏输入：localhost:8081，即可看到运行效果。
+![architecture-brief](uml/directories.png)
 
-<!--面向服务的架构：
-* 需要有声音的产生和颜色的变换：单独设计琴键发生的接口和时间，不同乐器的调用，只需要索引到相应的音色库即可；颜色该边，先建立一个颜色变换的对应关系表并提供相应的接口，然后就可以根据音阶的不同获取到相对应的颜色；
-* 自动播放 mid 文件功能：提供读取拖动文件到页面的调用接口；然后由另外的类实现mid文件的解析，并转成成琴键的操作；这是就可以在界面上显示出自动播放的过程。-->
+Typescript 需要先编译成js才可以真正执行；我们选择使用gulp来进行热编译和链接各个文件生成前端页面同时运行后端。编译后，会生成一个dist目录。打开使用chrome内核的浏览器，在地址栏输入：localhost:8081，即可运行。
+
+设计思想：
+* 音域：
+统一所有乐器的音域，使用标准钢琴键盘上的全音域，即A0-C8，编号为0-87，共88个不同的音高。切换乐器仅仅只是改变音色。
+* 钢琴键盘：
+在钢琴界面上绘制了一个标准钢琴键盘，共88键（其中白建52个，黑键36个），琴键音高固定，点击可以发声变色，部分琴键可通过QWERTY键盘的映射来实现键盘控制演奏。
+* 巴扬键盘：
+巴扬键盘使用QWERTY键盘的主键盘区，排布采用巴扬手风琴右手[B系统键钮](http://thecipher.com/c_and_b_system_cba_spelling.html)，一个八度的十二个音分布在3排，4列。QWERTY键盘第四排是第一排的周期性延拓，一共有35个不同的键位，几乎能跨三个八度。如果把一个八度的十二个音分布在4排那么只需要3列就可以排好一个八度，差不多能跨四个八度，但是这样会增加弹奏难度。
+* MIDI文件：MIDI文件有不同的音轨，每个音轨有不同的乐器，节奏。本项目忽略打击乐器，同步合并所有音轨为单一音轨，忽略原MIDI文件制定的乐器，使用音色库选定的乐器音色进行播放MIDI文件。
+
+
+![采用QWERTY键盘的Bayan键盘](image/QWERTY-Bayan.png)
+[![B系统键盘](image/CBA_Bsys_Spell.gif)](http://thecipher.com/cba_b_system_spelling.html)
+[![半音阶](image/chromatic-movement.png)](http://thecipher.com/cba_b_system_basics.html)
+
+点击时，单独设计琴键发生的接口和时间，不同乐器的调用，只需要切换相应的音色库即可；颜色该边，先建立一个颜色变换的对应关系表并提供相应的接口，然后就可以根据音阶的不同获取到相对应的颜色；
+* 自动播放 mid 文件功能：提供读取拖动文件到页面的调用接口；然后由另外的类实现mid文件的解析，并转成成琴键的操作；这是就可以在界面上显示出自动播放的过程。
 
 #### 3、模块划分
 * 自动播放：分为时间控制，解析文件，传送相关音色库的编码
