--- a/相关文档/设计文档.md
+++ b/相关文档/设计文档.md
@@ -77,15 +77,15 @@ Typescript 需要先编译成js才可以真正执行；我们选择使用gulp来
 巴扬键盘使用QWERTY键盘的主键盘区，排布采用巴扬手风琴右手[B系统键钮](http://thecipher.com/c_and_b_system_cba_spelling.html)，一个八度的十二个音分布在3排，4列。QWERTY键盘第四排是第一排的周期性延拓，一共有35个不同的键位，几乎能跨三个八度。如果把一个八度的十二个音分布在4排那么只需要3列就可以排好一个八度，差不多能跨四个八度，但是这样会增加弹奏难度。
 * MIDI文件：MIDI文件有不同的音轨，每个音轨有不同的乐器，节奏。本项目忽略打击乐器，同步合并所有音轨为单一音轨，忽略原MIDI文件制定的乐器，使用音色库选定的乐器音色进行播放MIDI文件。
 
-
 ![采用QWERTY键盘的Bayan键盘](image/QWERTY-Bayan.png)
 [![B系统键盘](image/CBA_Bsys_Spell.gif)](http://thecipher.com/cba_b_system_spelling.html)
 [![半音阶](image/chromatic-movement.png)](http://thecipher.com/cba_b_system_basics.html)
 
-点击时，单独设计琴键发生的接口和时间，不同乐器的调用，只需要切换相应的音色库即可；颜色该边，先建立一个颜色变换的对应关系表并提供相应的接口，然后就可以根据音阶的不同获取到相对应的颜色；
-* 自动播放 mid 文件功能：提供读取拖动文件到页面的调用接口；然后由另外的类实现mid文件的解析，并转成成琴键的操作；这是就可以在界面上显示出自动播放的过程。
+## 3、领域模型
 
-#### 3、模块划分
+![Domain Model](uml/DomainModel.png)
+
+## 4、模块划分
 * 自动播放：分为时间控制，解析文件，传送相关音色库的编码
 * 发声模块：根据相应的键盘按钮映射到琴键，然后获取相应的音色库中的文件并发声。根据建立好的颜色映射关系，改变琴键的颜色。
 * 乐器界面：软件主要分为基于巴扬和钢琴的2个界面。根据不同乐器的琴键排布特点来设计硬盘的映射关系。
@@ -93,31 +93,34 @@ Typescript 需要先编译成js才可以真正执行；我们选择使用gulp来
 ```txt
 ├─css: 存放页面所用到的样式
 │   ├─index.css：初始页面的样式
-│   └─piano.css：切换到钢琴页面时的样式
+│   └─piano.css：钢琴页面时的样式
 ├─lib: 存放后端处理用到的文件
-│   ├─instrument：存放不用乐器所对应的音色库
-│   └─可供选择的自动播放mid文件
+│   ├─instrument：音色库文件
+│   └─music： MIDI 音乐文件
 ├─sever：存放服务器代码
-│   └─server.js：后端处理源代码
-└─src：前端开发的Typescript源码
-    ├─Bayan.ts：巴扬的整体设计
-    ├─BayanKey.ts：巴扬乐器每个琴键的设计
-    ├─ColorMap.ts: 建立音调和颜色的对应关系库  
-    ├─dropEvent.ts: 解析拖动到页面中的mid文件
-    ├─init.ts：页面的初始化和启动
-    ├─keybdEvent.ts：定义键盘事件
-    ├─mainController.ts：控制自动播放
-    ├─midiFileProsess.ts：处理mid文件
-    ├─MIDIParser.ts：解析mid文件
-    ├─Piano.ts：创建钢琴的页面并进行相关设置
-    ├─PianoRoll.ts：在钢琴下方加上卷帘的动画效果
-    ├─request.ts：获取页面的各种请求
-    ├─soundEvent.ts：将琴键的发声组合成一个事件
-    ├─SoundFont.ts：单个琴键的发生
-    └─TimeController.ts：时间定时控制器
-
+│   └─server.js：后端处理代码
+├─src：前端的Typescript代码
+│   ├─Bayan.ts：巴扬的整体设计
+│   ├─BayanKey.ts：巴扬乐器每个琴键的设计
+│   ├─ColorMap.ts: 建立音调和颜色的对应关系库  
+│   ├─dropEvent.ts: 解析拖动到页面中的mid文件
+│   ├─init.ts：页面的初始化和启动
+│   ├─keybdEvent.ts：定义键盘事件
+│   ├─mainController.ts：控制自动播放
+│   ├─midiFileProsess.ts：处理mid文件
+│   ├─MIDIParser.ts：解析mid文件
+│   ├─Piano.ts：创建钢琴的页面并进行相关设置
+│   ├─PianoRoll.ts：在钢琴下方加上卷帘的动画效果
+│   ├─request.ts：获取页面的各种请求
+│   ├─soundEvent.ts：将琴键的发声组合成一个事件
+│   ├─SoundFont.ts：单个琴键的发生
+│   └─TimeController.ts：时间定时控制器
+└─index.html
 ```
+## 5、主要用例图
 
-#### 4、设计模式
+![Domain Model](uml/UserCase.png)
+
+## 6、设计模式
 * 单例模式：应用中将数据从视图层抽离，放到一个应用全局的位置进行管理，所有页面使用的都是同一份数据。当数据更新的时候所有引用到数据的界面也会同步更新。代码复杂度降低，内存使用情况也得到了优化。该模式基本覆盖到了所有类的调用和声明。
 * 面向对象编程：应用中使用了面向对象编程的封装思想，按照实现的功能对各个模块进行了封装。特别是将巴扬和钢琴两种不同的乐器独立出来，单独实现了Bayan.ts和Piano.ts这两个不同的类。这两种乐器差别很大，面向对象的设计，对于琴键的布局以及切换，还有发声的选择和调整，都有很大的帮助。
