--- a/相关文档/安装部署说明.md
+++ b/相关文档/安装部署说明.md
@@ -2,17 +2,22 @@
 
 ## 直接访问服务器
 
-由于我们已经把程序部署在服务器上，因此可直接访问123.207.110.18:8081。
+由于我们已经把程序部署在服务器上，可直接访问http://123.207.110.18:8081。
 
 ## 本地部署
 
-1. 安装node.js：`npm install node`
-2. 切换到Color-Bayan目录，执行`npm install`
-3. 安装gulp：
-   1. `npm install --global gulp`
-   2. `npm install --save-dev gulp`
-4. 测试gulp：`gulp -v`
-5. 执行gulp 命令行输入： `gulp`
-6. 双击打开 /dist 目录下的 index.html 即可看到相应的网页（需要联网）。
+1. 本网页使用了nodejs部署客户端。请先安装[nodejs](https://nodejs.org/en/)以及npm包管理工具
 
+2. 本网页使用了gulp进行热编译。需要先安装gulp。安装命令如下：
 
+```
+npm install --global gulp
+```
+
+3. 如果gulp安装完成，输入`gulp -v`可查看gulp的版本。
+
+4. 切换到Color-Bayan目录，执行：`npm install`安装相应的依赖包。
+
+5. 在命令行输入`gulp`进行热编译，等待服务器启动
+
+6. 服务器启动后在8081端口启动
