--- a/相关文档/小组分工与贡献率说明.md
+++ b/相关文档/小组分工与贡献率说明.md
@@ -4,11 +4,11 @@
 
 | 学号       | 姓名      | 分工                        | 贡献率（合计100%） |
 | -------- | ------- | ------------------------- | ----------- |
-| 14331315 | 徐佳豪（组长） | 项目管理、需求分析、架构设计、模块设计与编码、答辩 | 28%         |
-| 14331062 | 方铭      | 需求分析、架构设计、模块设计与编码、项目文档编写       | 29%         |
-| 14331194 | 卢卓君     | 项目文档编写  | 13%         |
-| 14331151 | 梁智辉     | 需求分析、模块设计与编码、项目文档编写       | 15%         |
-| 14331059 | 杜泽炜     | 需求分析、模块设计与编码、项目文档编写       | 15%         |
+| 14331062 | 方铭（组长）| 需求分析、架构设计、模块设计与编码、项目文档编写 | 29% |
+| 14331315 | 徐佳豪 | 项目管理、需求分析、架构设计、模块设计与编码、答辩 | 28% |
+| 14331194 | 卢卓君 | 需求分析、模块设计与编码、项目文档编写  | 13% |
+| 14331151 | 梁智辉 | 需求分析、模块设计与编码、项目文档编写  | 15% |
+| 14331059 | 杜泽炜 | 需求分析、模块设计与编码、项目文档编写  | 15% |
 
 ## 制品与贡献率
 
@@ -25,7 +25,7 @@
 |      |   Server   | 25%  |  -   |  -   | 15%  | 60%  |
 |      |     UI     | 30%  | 30%  | 40%  |  -   |  -   |
 |  文档  |   安装部署说明   | 60%  |  -   |  -   | 40%  |  -   |
-|      |    用户手册    |  -   |  -   | 60%  | 40%  |  -   |
+|      |    用户手册    |  20%   |  -   | 50%  | 30%  |  -   |
 |      | 小组分工与贡献率说明 |  -   |  -   |  -   | 70%  | 30%  |
 |      | 软件需求规格说明书  | 10%  | 15%  | 10%  | 35%  | 30%  |
 |      |   软件设计文档   | 25%  | 35%  | 15%  | 15%  | 10%  |
