--- a/相关文档/设计文档.md
+++ b/相关文档/设计文档.md
@@ -88,7 +88,7 @@ Typescript 需要先编译成js才可以真正执行；我们选择使用gulp来
 ## 4、模块划分
 * 自动播放：分为时间控制，解析文件，传送相关音色库的编码
 * 发声模块：根据相应的键盘按钮映射到琴键，然后获取相应的音色库中的文件并发声。根据建立好的颜色映射关系，改变琴键的颜色。
-* 乐器界面：软件主要分为基于巴扬和钢琴的2个界面。根据不同乐器的琴键排布特点来设计硬盘的映射关系。
+* 乐器界面：软件主要分为基于巴扬和钢琴的2个界面。根据不同乐器的琴键排布特点来设计键盘的映射关系。
 
 ```txt
 ├─css: 存放页面所用到的样式
